--- a/index.html
+++ b/index.html
@@ -10,5 +10,22 @@
 </p>
 </div>
 
+<table>
+  <tr>
+    <td>
+       <a href="https://www.chrisd.github.io">Research</a> 
+    </td>
+    <td>
+       <a href="https://www.chrisd.github.io">Experience</a> 
+    </td>
+    <td>
+       <a href="https://www.chrisd.github.io">CV</a> 
+    </td>
+    <td>
+       <a href="https://www.chrisd.github.io">Contact</a> 
+    </td>
+  </tr>
+</table> 
+
 
 
