--- a/index.html
+++ b/index.html
@@ -1,31 +1,39 @@
 <head><link rel="stylesheet" href="https://latex.vercel.app/style.css"></head>
-<title>Kris Diaz</title>
-<center><img src="https://github.com/chrisd149/chrisd149.github.io/blob/main/images/yo.jpg?raw=true" title="literally me btw"></center>
+
+<title>
+  Kris Diaz
+</title>
+
+<center>
+  <img src="https://github.com/chrisd149/chrisd149.github.io/blob/main/images/yo.jpg?raw=true" title="literally me btw">
+</center>
 
 <p class="author">Kris Diaz <br> they/them</p>
 
 <div class="abstract">
   <h2>Introduction</h2>
-  <p>Howdy! My prefered name is Kris, however, you may also call me Chris! I'm currently an undergraduate student at the University of South Florida studying physics & astronomy. 
-</p>
+  <p>
+    Howdy! My prefered name is Kris, however, you may also call me Chris! I'm currently an undergraduate student at the University of South Florida studying physics & astronomy. 
+  </p>
 </div>
 
-<table>
-  <tr>
-    <td>
-       <a href="https://www.chrisd.github.io">Research</a> 
-    </td>
-    <td>
-       <a href="https://www.chrisd.github.io">Experience</a> 
-    </td>
-    <td>
-       <a href="https://www.chrisd.github.io">CV</a> 
-    </td>
-    <td>
-       <a href="https://www.chrisd.github.io">Contact</a> 
-    </td>
-  </tr>
-</table> 
-
+<center>
+  <table>
+    <tr>
+      <td>
+         <a href="https://www.chrisd.github.io">Research</a> 
+      </td>
+      <td>
+         <a href="https://www.chrisd.github.io">Experience</a> 
+      </td>
+      <td>
+         <a href="https://www.chrisd.github.io">CV</a> 
+      </td>
+      <td>
+         <a href="https://www.chrisd.github.io">Contact</a> 
+      </td>
+    </tr>
+  </table> 
+</center>
 
 
