--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
   <table>
     <tr>
       <td>
-         <a href="https://www.chrisd149.github.io">Research</a> 
+         <a href="https://chrisd149.github.io/">Research</a> 
       </td>
       <td>
-         <a href="https://www.chrisd149.github.io">Experience</a> 
+         <a href="https://chrisd149.github.io/">Experience</a> 
       </td>
       <td>
-         <a href="https://www.chrisd149.github.io">CV</a> 
+         <a href="https://chrisd149.github.io/">CV</a> 
       </td>
       <td>
-         <a href="https://www.chrisd149.github.io">Contact</a> 
+         <a href="https://chrisd149.github.io/">Contact</a> 
       </td>
     </tr>
   </table> 
