--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head><link rel="stylesheet" href="https://latex.vercel.app/style.css"></head>
 
 <title>
-  Kris Diaz
+  (Work in Progress) Kris Diaz
 </title>
 
 <center>
@@ -14,6 +14,8 @@
   <h2>Introduction</h2>
   <p>
     Howdy! My prefered name is Kris, however, you may also call me Chris! I'm currently an undergraduate student at the University of South Florida studying physics & astronomy. 
+
+    Please note this site is not yet finished and some information/links may not be correct. 
   </p>
 </div>
 
