--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
   <table>
     <tr>
       <td>
-         <a href="https://chrisd149.github.io/">Research</a> 
+         <a href="https://kris-diaz.github.io/research">Research</a> 
       </td>
       <td>
-         <a href="https://chrisd149.github.io/">Experience</a> 
+         <a href="https://kris-diaz.github.io/experience">Experience</a> 
       </td>
       <td>
-         <a href="https://chrisd149.github.io/">CV</a> 
+         <a href="https://kris-diaz.github.io/cv">CV</a> 
       </td>
       <td>
-         <a href="https://chrisd149.github.io/">Contact</a> 
+         <a href="https://kris-diaz.github.io/contact">Contact</a> 
       </td>
     </tr>
   </table> 
