--- a/experience.html
+++ b/experience.html
@@ -1,12 +1,15 @@
 <head><link rel="stylesheet" href="https://latex.vercel.app/style.css"></head>
 
 <h2>Experience</h2>
+<hr>
 <h3>Corporate Clash</h3>
-<h5>A completely free-to-play massively multiplayer online game designed to be a reimagined experience of Disney's Toontown Online.</h5>
+<p>A completely free-to-play massively multiplayer online game designed to be a reimagined experience of Disney's Toontown Online.</p>
 
 <h4>Support Lead</h4>
+<p>Oversaw the operations of the Support Department, which is responsible for providing technical-assistance to users via Email.</p>
 <ul>
-  <li>point 1</li>
-  <li>point 2</li>
-  <li>point 3</li>
+  <li>Managed a team of representatives and assistant managers, achieving a 15% increase in user satisfcation scores.</li>
+  <li>Collaborated with other Team Leads to resolve internal conflicts between team members, which resulted in a 50% decrease in the team-wide turnover rate.</li>
+  <li>Organized interviews with prospective applicants and trained new team members.</li>
+  <li>Spearheaded the development of internal documentation using Confluence, leading to a 30% higher SLA compliance rate.</li>
 </ul>
