--- a/experience.html
+++ b/experience.html
@@ -5,7 +5,9 @@
 <h3>Corporate Clash</h3>
 <p>A completely free-to-play massively multiplayer online game designed to be a reimagined experience of Disney's Toontown Online.</p>
 
-<h4>Support Lead</h4>
+<p>Corporate Clash is a 501(c)(3) non-profit (EIN: 82-4222657) registered in the United States of America.</p>
+
+<h4>Support Lead & Manager | April 2022 - Current</h4>
 <p>Oversaw the operations of the Support Department, which is responsible for providing technical-assistance to users via Email.</p>
 <ul>
   <li>Managed a team of representatives and assistant managers, achieving a 15% increase in user satisfcation scores.</li>
