--- a/experience.html
+++ b/experience.html
@@ -2,16 +2,19 @@
 
 <h2>Experience</h2>
 <hr>
-<h3>Corporate Clash</h3>
-<p>A completely free-to-play massively multiplayer online game designed to be a reimagined experience of Disney's Toontown Online.</p>
 
-<p>Corporate Clash is a 501(c)(3) non-profit (EIN: 82-4222657) registered in the United States of America.</p>
+<div class="abstract">
+  <h2>Corporate Clash</h2>
+    <p>A completely free-to-play massively multiplayer online game designed to be a reimagined experience of Disney's Toontown Online.</p>
 
-<h4>Support Lead & Manager | April 2022 - Current</h4>
-<p>Oversaw the operations of the Support Department, which is responsible for providing technical-assistance to users via Email.</p>
-<ul>
-  <li>Managed a team of representatives and assistant managers, achieving a 15% increase in user satisfcation scores.</li>
-  <li>Collaborated with other Team Leads to resolve internal conflicts between team members, which resulted in a 50% decrease in the team-wide turnover rate.</li>
-  <li>Organized interviews with prospective applicants and trained new team members.</li>
-  <li>Spearheaded the development of internal documentation using Confluence, leading to a 30% higher SLA compliance rate.</li>
-</ul>
+    <p>Corporate Clash is a 501(c)(3) non-profit (EIN: 82-4222657) registered in the United States of America.</p>
+
+    <h4>Support Lead & Manager | April 2022 - Current</h4>
+    <p>Oversaw the operations of the Support Department, which is responsible for providing technical-assistance to users via Email.</p>
+    <ul>
+      <li>Managed a team of representatives and assistant managers, achieving a 15% increase in user satisfcation scores.</li>
+      <li>Collaborated with other Team Leads to resolve internal conflicts between team members, which resulted in a 50% decrease in the team-wide turnover rate.</li>
+      <li>Organized interviews with prospective applicants and trained new team members.</li>
+      <li>Spearheaded the development of internal documentation using Confluence, leading to a 30% higher SLA compliance rate.</li>
+    </ul>
+</div>
