--- a/experience.html
+++ b/experience.html
@@ -9,7 +9,8 @@
 
     <p>Corporate Clash is a 501(c)(3) non-profit (EIN: 82-4222657) registered in the United States of America.</p>
 
-    <h4>Support Lead & Manager | April 2022 - Current</h4>
+    <h4>Support Lead</h4>
+    <small>April 2022 - Current</small>
     <p>Oversaw the operations of the Support Department, which is responsible for providing technical-assistance to users via Email.</p>
     <ul>
       <li>Managed a team of representatives and assistant managers, achieving a 15% increase in user satisfcation scores.</li>
