--- a/experience.html
+++ b/experience.html
@@ -2,9 +2,8 @@
 
 <h2>Experience</h2>
 <hr>
-
   <h3>Corporate Clash</h3>
-    <p>A completely free-to-play massively multiplayer online game designed to be a reimagined experience of Disney's Toontown Online.</p>
+    <p>Corporate Clash is a completely free-to-play massively multiplayer online game designed to be a reimagined experience of Disney's Toontown Online. Here is a link to our website: <a href="https://corporateclash.net/">https://corporateclash.net/</a></p>
 
     <p>Corporate Clash is a 501(c)(3) non-profit (EIN: 82-4222657) registered in the United States of America.</p>
 
