--- a/experience.html
+++ b/experience.html
@@ -9,11 +9,23 @@
     <p>Corporate Clash is a 501(c)(3) non-profit (EIN: 82-4222657) registered in the United States of America.</p>
 
     <h4>Support Lead</h4>
-    <small>April 2022 - Current</small>
+    <small>September 2023 - Current</small>
     <p>Oversaw the operations of the Support Department, which is responsible for providing technical-assistance to users via Email.</p>
     <ul>
       <li>Managed a team of representatives and assistant managers, achieving a 15% increase in user satisfcation scores.</li>
       <li>Collaborated with other Team Leads to resolve internal conflicts between team members, which resulted in a 50% decrease in the team-wide turnover rate.</li>
       <li>Organized interviews with prospective applicants and trained new team members.</li>
       <li>Spearheaded the development of internal documentation using Confluence, leading to a 30% higher SLA compliance rate.</li>
+    </ul>
+<h4>Support Team Assistant Manager</h4>
+    <small>March 2023 - September 2023</small>
+    <ul>
+      <li>Collaborated with other assistant managers and team leads to manage daily operations of the Support Department.</li>
+      <li>Organized new initiatives to streamline hiring process, leading to a 50% increase in the number of successful applicants. </li>
+    </ul>
+<h4>Support Representative</h4>
+    <small>April 2022 - Current</small>
+    <ul>
+      <li>Responded to helpdesk tickets involving game, technical and account inquiries.</li>
+      <li>Utilized Python to troubleshoot highly technical tickets.</li>
     </ul>
