--- a/experience.html
+++ b/experience.html
@@ -6,9 +6,9 @@
     <a href="https://corporateclash.net/">https://corporateclash.net/</a>
     <p>Corporate Clash is a completely free-to-play massively multiplayer online game designed to be a reimagined experience of Disney's Toontown Online.</p>
 
-    <p>Corporate Clash is a 501(c)(3) non-profit (EIN: 82-4222657) registered in the United States of America.</p>
+    <p>Note: Corporate Clash is a 501(c)(3) non-profit (EIN: 82-4222657) registered in the United States of America.</p>
 
-    <h4>Support Lead</h4>
+    <h4>Support Team Lead</h4>
     <small>September 2023 - Current</small>
     <p>Oversaw the operations of the Support Department, which is responsible for providing technical-assistance to users via Email.</p>
     <ul>
