--- a/experience.html
+++ b/experience.html
@@ -4,27 +4,33 @@
 <hr>
   <h3>Corporate Clash</h3>
     <a href="https://corporateclash.net/">https://corporateclash.net/</a>
-    <p>Corporate Clash is a completely free-to-play massively multiplayer online game designed to be a reimagined experience of Disney's Toontown Online.</p>
+    <p>Corporate Clash is a completely free-to-play massively multiplayer online game designed to be a reimagined experience of Disney's Toontown Online.</p> 
+
+    <p>A personal backstory...
+      I played Corporate Clash since 2018 and always wanted to assist the team with maintaining and improving the game experience for players. After completing a semester of technical computer courses in high school, I thought it was time to take a chance and put my new found skills to the test. I applied and was accepted into the Corporate Clash Team as a Support Representative on April 25, 2022. Since then, I have been promoted twice, and currently serve as a Team Lead for the Support Team.</p> 
+ 
 
     <p>Note: Corporate Clash is a 501(c)(3) non-profit (EIN: 82-4222657) registered in the United States of America.</p>
 
     <h4>Support Team Lead</h4>
     <small>September 2023 - Current</small>
-    <p>Oversaw the operations of the Support Department, which is responsible for providing technical-assistance to users via Email.</p>
+    <p>I oversee the operations of the Support Team, which is responsible for providing technical-assistance to users via Email. I'm very much honored to be given this role by the previous outgoing Support Lead, who I always looked up to.</p>
     <ul>
-      <li>Managed a team of representatives and assistant managers, achieving a 15% increase in user satisfcation scores.</li>
+      <li>Managed a team of Support Representatives and Support Assistant Managers, achieving a 15% increase in user satisfcation scores.</li>
       <li>Collaborated with other Team Leads to resolve internal conflicts between team members, which resulted in a 50% decrease in the team-wide turnover rate.</li>
       <li>Organized interviews with prospective applicants and trained new team members.</li>
       <li>Spearheaded the development of internal documentation using Confluence, leading to a 30% higher SLA compliance rate.</li>
     </ul>
 <h4>Support Team Assistant Manager</h4>
     <small>March 2023 - September 2023</small>
+    <p>In this posistion, I assisted the Support Lead with her responsiblitles. This included leading meetings, creating training materials, and assisting Support Representatives with their Email tickets. I learned a lot about leadership and became comfortable with managing the Support Team. Overtime, I felt that I grew to being a dependable person my team could approach for assistance.</p>
     <ul>
-      <li>Collaborated with other assistant managers and team leads to manage daily operations of the Support Department.</li>
+      <li>Collaborated with other assistant managers and team leads to manage daily operations of the Support Team.</li>
       <li>Organized new initiatives to streamline hiring process, leading to a 50% increase in the number of successful applicants. </li>
     </ul>
 <h4>Support Representative</h4>
     <small>April 2022 - Current</small>
+    <p>This was my very first role on the Corporate Clash team. </p>
     <ul>
       <li>Responded to helpdesk tickets involving game, technical and account inquiries.</li>
       <li>Utilized Python to troubleshoot highly technical tickets.</li>
