--- a/experience.html
+++ b/experience.html
@@ -4,9 +4,9 @@
 <hr>
   <h3>Corporate Clash</h3>
     <a href="https://corporateclash.net/">https://corporateclash.net/</a>
-    <p>Corporate Clash is a completely free-to-play massively multiplayer online game designed to be a reimagined experience of Disney's Toontown Online.</p> 
+    <small>Corporate Clash is a completely free-to-play massively multiplayer online game designed to be a reimagined experience of Disney's Toontown Online.</small> 
 
-    <p>A personal backstory...
+    <p>Now, for my
       I played Corporate Clash since 2018 and always wanted to assist the team with maintaining and improving the game experience for players. After completing a semester of technical computer courses in high school, I thought it was time to take a chance and put my new found skills to the test. I applied and was accepted into the Corporate Clash Team as a Support Representative on April 25, 2022. Since then, I have been promoted twice, and currently serve as a Team Lead for the Support Team.</p> 
  
 
@@ -14,7 +14,7 @@
 
     <h4>Support Team Lead</h4>
     <small>September 2023 - Current</small>
-    <p>I oversee the operations of the Support Team, which is responsible for providing technical-assistance to users via Email. I'm very much honored to be given this role by the previous outgoing Support Lead, who I always looked up to.</p>
+    <p>I oversee the operations of the Support Team, which is responsible for providing technical-assistance to users via Email. I'm very much honored to be given this role by the previous outgoing Support Lead, who I always looked up to as a mentor and good friend.</p>
     <ul>
       <li>Managed a team of Support Representatives and Support Assistant Managers, achieving a 15% increase in user satisfcation scores.</li>
       <li>Collaborated with other Team Leads to resolve internal conflicts between team members, which resulted in a 50% decrease in the team-wide turnover rate.</li>
