--- a/experience.html
+++ b/experience.html
@@ -3,10 +3,11 @@
 <h2>Experience</h2>
 <hr>
   <h3>Corporate Clash</h3>
-    <small>Corporate Clash is a completely free-to-play massively multiplayer online game designed to be a reimagined experience of Disney's Toontown Online.</small> 
     <label for="sn-anything" class="sidenote-toggle">⊕</label>
     <input type="checkbox" id="sn-anything" class="sidenote-toggle" />
-    <span class="left" class="sidenote"> Website: <a href="https://corporateclash.net/">https://corporateclash.net/</a></span>
+    <span class="sidenote left"> Website: <a href="https://corporateclash.net/">https://corporateclash.net/</a></span>
+    <small>Corporate Clash is a completely free-to-play massively multiplayer online game designed to be a reimagined experience of Disney's Toontown Online.</small> 
+
     <p>I played Corporate Clash since 2018 and always wanted to assist the team with maintaining and improving the game experience for players. After completing a semester of technical computer courses in high school, I thought it was time to take a chance and put my new found skills to the test. I applied and was accepted into the Corporate Clash Team as a Support Representative on April 25, 2022. Since then, I have been promoted twice, and currently serve as a Team Lead for the Support Team.</p> 
  
     <p>Note: Corporate Clash is a 501(c)(3) non-profit (EIN: 82-4222657) registered in the United States of America.</p>
