--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
          <a href="https://kris-diaz.github.io/experience">Experience</a> 
       </td>
       <td>
-         <a href="https://kris-diaz.github.io/cv">CV</a> 
+         <a href="https://github.com/chrisd149/chrisd149.github.io/blob/main/cv.pdf?raw=true">CV</a> 
       </td>
       <td>
          <a href="https://kris-diaz.github.io/contact">Contact</a> 
