--- a/experience.html
+++ b/experience.html
@@ -2,36 +2,22 @@
 
 <h2>Experience</h2>
 <hr>
+<small>A more detailed form of my experience can be found on my <a href="https://github.com/chrisd149/chrisd149.github.io/blob/main/cv.pdf?raw=true">CV</a></small>
   <h3>Corporate Clash</h3>
-    <label for="sn-anything" class="sidenote-toggle">⊕</label>
-    <input type="checkbox" id="sn-anything" class="sidenote-toggle" />
-    <span class="sidenote left"> Corporate Clash's website: <a href="https://corporateclash.net/">https://corporateclash.net/</a></span>
-    <small>Corporate Clash is a completely free-to-play massively multiplayer online game designed to be a reimagined experience of Disney's Toontown Online.</small> 
+    <label for="sn-corp" class="sidenote-toggle">⊕</label>
+    <input type="checkbox" id="sn-corp" class="sidenote-toggle" />
+    <span class="sidenote left"> Corporate Clash is a completely free-to-play massively multiplayer online game designed to be a reimagined experience of Disney's Toontown Online.
+        <hr>
+        Corporate Clash's website: <a href="https://corporateclash.net/">https://corporateclash.net/</a></span>
+    <small>April 2022 - Present</small>
 
-    <p>I played Corporate Clash since 2018 and always wanted to assist the team with maintaining and improving the game experience for players. After completing a semester of technical computer courses in high school, I thought it was time to take a chance and put my new found skills to the test. I applied and was accepted into the Corporate Clash Team as a Support Representative on April 25, 2022. Since then, I have been promoted twice, and currently serve as a Team Lead for the Support Team.</p> 
- 
-    <p>Note: Corporate Clash is a 501(c)(3) non-profit (EIN: 82-4222657) registered in the United States of America.</p>
+    <p>I have been volunteering for Corporate Clash since April 2022 and currently serve in leadership as a Team Lead & Manager for the Support Team.</p>
+    <p>I oversee the operations of the Support Team, which is responsible for providing technical-assistance to users via Email.</p>
 
-    <h4>Support Team Lead</h4>
-    <small>September 2023 - Current</small>
-    <p>I oversee the operations of the Support Team, which is responsible for providing technical-assistance to users via Email. I'm very much honored to be given this role by the previous outgoing Support Lead, who I always looked up to as a mentor and good friend.</p>
-    <ul>
-      <li>Managed a team of Support Representatives and Support Assistant Managers, achieving a 15% increase in user satisfcation scores.</li>
-      <li>Collaborated with other Team Leads to resolve internal conflicts between team members, which resulted in a 50% decrease in the team-wide turnover rate.</li>
-      <li>Organized interviews with prospective applicants and trained new team members.</li>
-      <li>Spearheaded the development of internal documentation using Confluence, leading to a 30% higher SLA compliance rate.</li>
-    </ul>
-<h4>Support Team Assistant Manager</h4>
-    <small>March 2023 - September 2023</small>
-    <p>In this posistion, I assisted the Support Lead with her responsiblitles. This included leading meetings, creating training materials, and assisting Support Representatives with their Email tickets. I learned a lot about leadership and became comfortable with managing the Support Team. Overtime, I felt that I grew to being a dependable person my team could approach for assistance.</p>
-    <ul>
-      <li>Collaborated with other assistant managers and team leads to manage daily operations of the Support Team.</li>
-      <li>Organized new initiatives to streamline hiring process, leading to a 50% increase in the number of successful applicants. </li>
-    </ul>
-<h4>Support Representative</h4>
-    <small>April 2022 - Current</small>
-    <p>This was my very first role on the Corporate Clash team. </p>
-    <ul>
-      <li>Responded to helpdesk tickets involving game, technical and account inquiries.</li>
-      <li>Utilized Python to troubleshoot highly technical tickets.</li>
-    </ul>
+    <h3>Engineering Robot Car Project</h3>
+    <label for="sn-usf" class="sidenote-toggle">⊕</label>
+    <input type="checkbox" id="sn-usf" class="sidenote-toggle" />
+    <span class="sidenote left"> Source code: <a href="https://github.com/kris-diaz/race-car-robot/">https://github.com/kris-diaz/race-car-robot/</a></span>
+
+    <p>This was a class project four classmates and I completed for our Engineering Lab course at USF. We created an Arduino-based robot car that could be controlled via a phone.</p>
+    <p>I was responsible for creating the software for the project, including programming the car and developing the remote control app.</p>
