--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <head><link rel="stylesheet" href="https://latex.vercel.app/style.css"></head>
 
 <title>
-  (Work in Progress) Kris Diaz
+ Christian "Kris" Diaz
 </title>
 
 <center>
   <img src="https://github.com/chrisd149/chrisd149.github.io/blob/main/images/yo.jpg?raw=true" title="literally me btw">
 </center>
 
-<p class="author">Kris Diaz <br> they/them</p>
+<p class="author">Christian "Kris" Diaz <br> they/them</p>
 
 <div class="abstract">
   <h2>Introduction</h2>
   <p>
-    Howdy! My prefered name is Kris, however, you may also call me Chris! I'm currently an undergraduate student at the University of South Florida studying physics & astronomy. 
+    Howdy! My preferred name is Kris, however, you may also call me Christian! I'm currently an undergraduate student at the University of South Florida studying Physics & Astronomy. I aspire to work in the fields of Cosmology, Stellar Astronomy or Planetary Science, and would greatly appreciate the opportunity to join your research team!
 
     <hr>
-    
-    Please note this site is not yet finished and some information/links may not be correct. 
+    Some of my personal interests include astrophotography, performing volunteer work and mountain biking. I try to cultivate spaces that are inclusive of people of all walks of life, whether that be in my volunteer work or personal life.
+
   </p>
 </div>
 
@@ -25,7 +25,7 @@
   <table>
     <tr>
       <td>
-         <a href="https://kris-diaz.github.io/research">Research</a> 
+         <a href="https://kris-diaz.github.io/research">Astrophotography</a>
       </td>
       <td>
          <a href="https://kris-diaz.github.io/experience">Experience</a> 
@@ -34,7 +34,7 @@
          <a href="https://github.com/chrisd149/chrisd149.github.io/blob/main/cv.pdf?raw=true">CV</a> 
       </td>
       <td>
-         <a href="https://kris-diaz.github.io/contact">Contact</a> 
+         <a href="https://kris-diaz.github.io/contact">Contact</a>
       </td>
     </tr>
   </table> 
