--- a/experience.html
+++ b/experience.html
@@ -1,5 +1,9 @@
 <head><link rel="stylesheet" href="https://latex.vercel.app/style.css"></head>
+<title>
+ Experience
+</title>
 
+<p class="author">Christian "Kris" Diaz <br> they/them</p>
 <h2>Experience</h2>
 <hr>
 <small>A more detailed form of my experience can be found on my <a href="https://github.com/chrisd149/chrisd149.github.io/blob/main/cv.pdf?raw=true">CV</a></small>
@@ -21,3 +25,7 @@
 
     <p>This was a class project four classmates and I completed for our Engineering Lab course at USF. We created an Arduino-based robot car that could be controlled via a phone.</p>
     <p>I was responsible for creating the software for the project, including programming the car and developing the remote control app.</p>
+
+
+<br>
+<h4><a href="https://kris-diaz.github.io/">Back</a></h4>
