--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <table>
     <tr>
       <td>
-         <a href="https://kris-diaz.github.io/research">Astrophotography</a>
+         <a href="https://kris-diaz.github.io/astrophotography">Astrophotography</a>
       </td>
       <td>
          <a href="https://kris-diaz.github.io/experience">Experience</a> 
