--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </title>
 
 <center>
-  <img src="https://github.com/chrisd149/chrisd149.github.io/blob/main/images/yo.jpg?raw=true" title="literally me btw">
+  <img src="https://github.com/chrisd149/chrisd149.github.io/blob/main/images/yo.jpg?raw=true">
 </center>
 
 <p class="author">Christian "Kris" Diaz <br> they/them</p>
@@ -31,7 +31,7 @@
          <a href="https://kris-diaz.github.io/experience">Experience</a> 
       </td>
       <td>
-         <a href="https://github.com/chrisd149/chrisd149.github.io/blob/main/cv.pdf?raw=true">CV</a> 
+         <a href="https://github.com/chrisd149/chrisd149.github.io/blob/main/cv.pdf?raw=true">Resume</a> 
       </td>
       <td>
          <a href="https://kris-diaz.github.io/contact">Contact</a>
