--- a/astrophotography.html
+++ b/astrophotography.html
@@ -6,17 +6,22 @@
 
 <h2>Astrophotography</h2>
 <hr>
+
 <div class="row">
   <div class="column">
-    <img src="https://github.com/chrisd149/chrisd149.github.io/blob/main/images/yo.jpg?raw=true" alt="Snow" style="width:100%">
+      <img src="https://github.com/kris-diaz/kris-diaz.github.io/blob/main/images/m33.jpg?raw=true" alt="Triangulum Galaxy M33 | Copyright Kris Diaz @2024" style="width:100%">
+      <p>Triangulum Galaxy M33</p>
   </div>
   <div class="column">
-    <img src="https://github.com/chrisd149/chrisd149.github.io/blob/main/images/yo.jpg?raw=true" alt="Forest" style="width:100%">
+      <img src="https://github.com/kris-diaz/kris-diaz.github.io/blob/main/images/saturn.jpg?raw=true" alt="Saturn | Copyright Kris Diaz @2024" style="width:100%">
+      <p>Saturn</p>
   </div>
   <div class="column">
-    <img src="https://github.com/chrisd149/chrisd149.github.io/blob/main/images/yo.jpg?raw=true" alt="Mountains" style="width:100%">
+      <img src="https://github.com/kris-diaz/kris-diaz.github.io/blob/main/images/m42.jpg?raw=true" alt="Orion Nebula M42 | Copyright Kris Diaz @2024" style="width:100%">
+      <p>Orion Nebula M42</p>
   </div>
 </div>
+
 <br>
 <h4><a href="https://kris-diaz.github.io/">Back</a></h4>
 
