--- a/astrophotography.html
+++ b/astrophotography.html
@@ -7,20 +7,15 @@
 <h2>Astrophotography</h2>
 <hr>
 
-<div class="row">
-  <div class="column">
-      <img src="https://github.com/kris-diaz/kris-diaz.github.io/blob/main/images/m33.jpg?raw=true" alt="Triangulum Galaxy M33 | Copyright Kris Diaz @2024" style="width:100%">
-      <p>Triangulum Galaxy M33</p>
-  </div>
-  <div class="column">
-      <img src="https://github.com/kris-diaz/kris-diaz.github.io/blob/main/images/saturn.jpg?raw=true" alt="Saturn | Copyright Kris Diaz @2024" style="width:100%">
-      <p>Saturn</p>
-  </div>
-  <div class="column">
-      <img src="https://github.com/kris-diaz/kris-diaz.github.io/blob/main/images/m42.jpg?raw=true" alt="Orion Nebula M42 | Copyright Kris Diaz @2024" style="width:100%">
-      <p>Orion Nebula M42</p>
-  </div>
-</div>
+<img src="https://github.com/kris-diaz/kris-diaz.github.io/blob/main/images/m33.jpg?raw=true" alt="Triangulum Galaxy M33 | Copyright Kris Diaz @2024" style="width:100%">
+<p><strong>Figure 1.</strong> Triangulum Galaxy M33</p>
+<br>
+<img src="https://github.com/kris-diaz/kris-diaz.github.io/blob/main/images/saturn.png?raw=true" alt="Saturn | Copyright Kris Diaz @2024" style="width:100%">
+<p><strong>Figure 2.</strong> Saturn</p>
+
+<br>
+<img src="https://github.com/kris-diaz/kris-diaz.github.io/blob/main/images/m42.jpg?raw=true" alt="Orion Nebula M42 | Copyright Kris Diaz @2024" style="width:100%">
+<p><strong>Figure 3.</strong> Orion Nebula M42</p>
 
 <br>
 <h4><a href="https://kris-diaz.github.io/">Back</a></h4>
