--- a/experience.html
+++ b/experience.html
@@ -15,7 +15,7 @@
     <small>April 2022 - Present</small>
 
     <p>I have been volunteering for Corporate Clash since April 2022 and currently serve in leadership as a Team Lead & Manager for the Support Team.</p>
-    <p>I oversee the operations of the Support Team, which is responsible for providing technical-assistance to users via Email.</p>
+    <p>I help oversee the operations of the Support Team, which is responsible for providing technical-assistance to users via Email.</p>
 
     <h3>Engineering Robot Car Project</h3>
     <label for="sn-usf" class="sidenote-toggle">⊕</label>
