--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </title>
 
 <center>
-  <img src="https://github.com/chrisd149/chrisd149.github.io/blob/main/images/yo.jpg?raw=true">
+  <img src="https://github.com/kris-diaz/kris-diaz.github.io/blob/main/images/yo.jpg?raw=true">
 </center>
 
 <p class="author">Christian "Kris" Diaz <br> they/them</p>
@@ -13,7 +13,7 @@
 <div class="abstract">
   <h2>Introduction</h2>
   <p>
-    Howdy! My preferred name is Kris, however, you may also call me Christian! I'm an undergraduate student at the University of South Florida studying Physics & Astronomy. I aspire to work in the fields of Cosmology, Stellar Astronomy or Planetary Science, and would greatly appreciate the opportunity to join your research team!
+    Howdy! My preferred name is Kris, however, you may also call me Christian! I'm an undergraduate student at the University of South Florida studying Physics & Astronomy. I aspire to work in the field of the physical sciences and would greatly appreciate the opportunity to join your research team!
 
     <hr>
     Some of my personal interests include astrophotography, performing volunteer work and mountain biking. I try to cultivate spaces that are inclusive of people of all walks of life, whether that be in my volunteer work or personal life.
